[package]
name = "raymarcher"
version = "0.1.0"
authors = ["pema99 <pemamalling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
impl_ops = "0.1.1"
minifb = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"